--- a/index.html
+++ b/index.html
@@ -203,13 +203,13 @@
 
 	<div class="home">
 		<div class="background_image" style="background-image:url(images/index.jpg)"></div>
-		<div class="home_title"><h1><font color="black">Consert</font></h1></div>
+		<div class="home_title"><h1><font color="black">Concert</font></h1></div>
 		<div class="slider" id="slider3">
-			<div style="background-image:url(images/Konser1.jpg)">
+			<img src="images/Konser1.jpg" style="width: 100%; height: 100%">
 			</div>
-			<div style="background-image:url(images/Konser2.jpg)">
+			<img src="images/Konser2.jpg" style="width: 100%; height: 100%">
 			</div>
-			<div style="background-image:url(images/Konser3.jpg)">
+			<img src="images/Konser3.jpg" style="width: 100%; height: 100%">
 			</div>
 			<!-- The Arrows -->
 			<i class="left" class="arrows" style="z-index:2; position:absolute;">
