--- a/index.html
+++ b/index.html
@@ -205,11 +205,11 @@
 		<div class="background_image" style="background-image:url(images/index.jpg)"></div>
 		<div class="home_title"><h1><font color="black">Concert</font></h1></div>
 		<div class="slider" id="slider3">
-			<img src="images/Konser1.jpg" style="width: 100%; height: 100%">
+			<img src="images/Konser1.jpg" style="width: 100%; height: 100%" class="konser">
 			</div>
-			<img src="images/Konser2.jpg" style="width: 100%; height: 100%">
+			<img src="images/Konser2.jpg" style="width: 100%; height: 100%" class="konser">
 			</div>
-			<img src="images/Konser3.jpg" style="width: 100%; height: 100%">
+			<img src="images/Konser3.jpg" style="width: 100%; height: 100%" class="konser">
 			</div>
 			<!-- The Arrows -->
 			<i class="left" class="arrows" style="z-index:2; position:absolute;">
