--- a/concert.html
+++ b/concert.html
@@ -89,9 +89,9 @@
 	<div class="homes">
 		<div class="slider" id="slider1">
 			<!-- Slides -->
-			<div style="background-image:url(images/Konser1.jpg)"></div>
-			<div style="background-image:url(images/Konser2.jpg)"></div>
-			<div style="background-image:url(images/Konser3.jpg)"></div>
+			<img src="images/Konser1.jpg" style="width: 100%; height: 100%">
+			<img src="images/Konser2.jpg" style="width: 100%; height: 100%">
+			<img src="images/Konser3.jpg" style="width: 100%; height: 100%">
 			<!-- The Arrows -->
 			<i class="left" class="arrows" style="z-index:2; position:absolute;"><svg viewBox="0 0 100 100"><path d="M 10,50 L 60,100 L 70,90 L 30,50  L 70,10 L 60,0 Z"></path></svg></i>
 			<i class="right" class="arrows" style="z-index:2; position:absolute;"><svg viewBox="0 0 100 100"><path d="M 10,50 L 60,100 L 70,90 L 30,50  L 70,10 L 60,0 Z" transform="translate(100, 100) rotate(180) "></path></svg></i>
