--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
 		<div class="background_image" style="background-image:url(images/index.jpg)"></div>
 		<div class="slider" id="slider1">
 			<!-- Slides -->
-			<div style="background-image:url(images/Banner_1.jpg)"></div>
-			<div style="background-image:url(images/Banner_2.jpg)"></div>
-			<div style="background-image:url(images/Banner_3.jpg)"></div>
+			<div><img src="images/Banner_1.jpg" style="width: 100%; height: 100%"></div>
+			<div><img src="images/Banner_2.jpg" style="width: 100%; height: 100%"></div>
+			<div><img src="images/Banner_3.jpg" style="width: 100%; height: 100%"></div>
 			<!-- The Arrows -->
 			<i class="left" class="arrows" style="z-index:2; position:absolute;"><svg viewBox="0 0 100 100"><path d="M 10,50 L 60,100 L 70,90 L 30,50  L 70,10 L 60,0 Z"></path></svg></i>
 			<i class="right" class="arrows" style="z-index:2; position:absolute;"><svg viewBox="0 0 100 100"><path d="M 10,50 L 60,100 L 70,90 L 30,50  L 70,10 L 60,0 Z" transform="translate(100, 100) rotate(180) "></path></svg></i>
@@ -203,13 +203,13 @@
 
 	<div class="home">
 		<div class="background_image" style="background-image:url(images/index.jpg)"></div>
-		<div class="home_title"><h1><font color="black">Concert</font></h1></div>
+		<div class="home_title"><h1><font color="black">Consert</font></h1></div>
 		<div class="slider" id="slider3">
-			<img src="images/Konser1.jpg" style="width: 100%; height: 100%" class="konser">
+			<div><img src="images/Konser1.jpg" style="width: 100%; height: 100%">
 			</div>
-			<img src="images/Konser2.jpg" style="width: 100%; height: 100%" class="konser">
+			<div><img src="images/Konser2.jpg" style="width: 100%; height: 100%">
 			</div>
-			<img src="images/Konser3.jpg" style="width: 100%; height: 100%" class="konser">
+			<div><img src="images/Konser3.jpg" style="width: 100%; height: 100%">
 			</div>
 			<!-- The Arrows -->
 			<i class="left" class="arrows" style="z-index:2; position:absolute;">
